# openCv1

./: CMakeLists.txt  blurdemo_jni.cpp  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myapplication27/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/skype/slimcv/blurdemo/: AndroidCameraView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/myapplication27/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
